# locomotion

./: meson.build
data/: com.github.tintou.locomotion.desktop
data/icons/: icons.gresource.xml
data/providers/: RTD-Denver.provider
src/: Application.vala  Database.vala  GTFSParser.vala  Map.vala  StationMarker.vala  Window.vala
src/Objects/: Station.vala
vapi/: libgda-5.0.vapi
